[package]
name = "stringly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
calamine = "0.20.0"
clap = { version = "4.3.3", features = ["derive", "env"] }
fluent-syntax = { git = "https://github.com/projectfluent/fluent-rs", features = ["serde"] } # "0.11.0"
heck = "0.4.1"
icu = { path = "../icu4x/components/icu", features = ["std", "serde"] } # "1.2.0"
iso639 = "0.1.0"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["rustls", "gzip", "rustls-tls", "json"], default-features = false }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.5"
